# chipletos-mcp

./: CHANGELOG.md  LICENSE  README.md  manifest.json  pyproject.toml
docs/: CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  TOOLS.md
examples/: 01_predict_50ohm_geometry.md  02_inverse_design_hbm4.md  03_pareto_explore_diffpair.md  04_drc_check_aggressive_geometry.md  05_validate_against_paper.md  06_cross_solver_consensus.md  07_search_similar_s2p.md  08_search_wm811k_defect.md  09_fab_coupon_amkor.md  10_lab_readiness_triage.md  11_full_signoff_pipeline.md  12_ucie_link_design.md  13_77ghz_radar_design.md  14_low_loss_optical_substrate.md  15_compare_glass_materials.md  16_photonic_waveguide_design.md  17_photonic_drc_pretape.md  18_photonic_solver_validation.md
skills/chiplet_signoff_assistant/: SKILL.md
skills/glass_tgv_designer/: SKILL.md
skills/pareto_explorer/: SKILL.md
src/chipletos_mcp/: __init__.py  client.py  server.py
src/chipletos_mcp/tools/: __init__.py  cross_solver_matrix.py  drc_validate.py  generate_coupon.py  inverse_design.py  lab_readiness_score.py  leaderboard.py  pareto_design.py  photonic_drc.py  photonic_signoff_health.py  photonic_validate_ieee.py  predict_impedance.py  predict_waveguide_mode.py  search_defects.py  search_s2p_library.py  validate_against_measurement.py
tests/: conftest.py  test_client.py  test_live_integration.py  test_tools.py
